# CPP_babel_2019

./: .gitignore  CMakeLists.txt  Doxyfile  README.md  conanfile.py  conanfile.txt  conaninfo.txt  database  linux_to_windows64  mdr5.cpp  user.db
client/includes/: UISettings.hpp  UdpNetwork.hpp  callThread.hpp  callWindow.hpp  contact.hpp  contactWindow.hpp  loginWindow.hpp  main.hpp  mainWindow.hpp  optionWindow.hpp  portaudio.h
client/includes/Audio/: AudioException.hpp  AudioSettings.hpp  EncodeManager.hpp  IAudioDevice.hpp  OutputDevice.hpp  RecordingDevice.hpp  SoundManager.hpp
client/includes/CallManagement/: CallManager.hpp
client/includes/Mutex/: IMutex.hpp  Mutex.hpp  ScopedLock.hpp
client/includes/Network/: AsyncSession.hpp  IProtoNetwork.hpp  SERVER_IP.hpp  SessionManager.hpp  SipManager.hpp  TcpNetwork.hpp  UdpNetwork.hpp
client/src/: UISettings.cpp  UdpNetwork.cpp  callThread.cpp  callWindow.cpp  contact.cpp  contactWindow.cpp  loginWindow.cpp  main.cpp  mainwidget.cpp  mainwindow.cpp  optionWindow.cpp
client/src/Audio/: AudioException.cpp  EncodeManager.cpp  OutputDevice.cpp  RecordingDevice.cpp  SoundManager.cpp
client/src/CallManagement/: CallManager.cpp
client/src/Mutex/: Mutex.cpp  ScopedLock.cpp
client/src/Network/: AsyncSession.cpp  SessionManager.cpp  SipManager.cpp  TcpNetwork.cpp  UdpNetwork.cpp
server/: server
server/includes/: Server.hpp  SipManager.hpp
server/src/: Server.cpp  SipManager.cpp  connection_manager.cpp  main.cpp  tcp_connection.cpp
